<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="8dp">

    <androidx.cardview.widget.CardView
        android:layout_width="176dp"
        android:layout_height="122dp"
        app:cardCornerRadius="10dp">

        <ImageView
            android:id="@+id/ivBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/bg_menu_stories_1"
            app:cardCornerRadius="10dp" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/txtTilte"
        style="@style/text_bold_18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="10dp"
        android:text="@string/night_island"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/txtTime"
            style="@style/text_normal_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/time"
            android:textColor="@color/blueGrey_500" />

        <View
            android:layout_width="4dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginHorizontal="4dp"
            android:background="@drawable/circle_shape" />

        <TextView
            android:id="@+id/txtCategory"
            style="@style/text_normal_11"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sleep_music"
            android:textColor="@color/blueGrey_500" />
    </LinearLayout>
</LinearLayout>
